tests/type/undefined_type_global.rev
var foo: bar // error: unknown type 'bar'